<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"  
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    tools:context=".MainActivity" >

     <LinearLayout 
    	android:orientation="horizontal" 
    	android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"  
   		android:layout_weight="1" >  
    
	    <TextView
	        android:id="@+id/textview_static"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_static" />
	
		<EditText
	        android:id="@+id/edittext_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/login_example" />
	
	    <Button
	        android:id="@+id/button_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="Save"
	        android:text="@string/button_save" />
    
     </LinearLayout>
    
     <LinearLayout 
    	android:orientation="horizontal" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="2"  >  
    
	    <TextView
	        android:id="@+id/textview_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:hint="@string/saveName" />

	    <Button
	        android:id="@+id/button_get"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="GetRecord"
	        android:text="@string/getrecord" />

    </LinearLayout>
</LinearLayout>